--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,17 +12,17 @@ serde = { version = "=1.0", default-features = false, features = ["derive"] }
 serde_json = "=1.0"
 log = "=0.4"
 env_logger = "=0.10"
-clap = { version = "=4.1", features = ["derive"] }
+clap = { version = "=4.0", features = ["derive"] }
 clap-num = "=1.0.2"
 
 # halo2
-# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
+# # halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
 halo2_proofs = { path = "../halo2-pse/halo2_proofs" }
 
 # Axiom's helper API with basic functions 
-halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }
+halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0-ce" }
 # Axiom poseidon chip (adapted from Scroll)
-poseidon = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }
+poseidon = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0-ce" }
 # Axiom Evm wrapper 
 # These are just for making proving executables, if you are just building a library you don't need them as dependencies in your project
 axiom-eth = { git = "https://github.com/axiom-crypto/axiom-eth.git", branch = "community-edition", default-features = false, features = [
@@ -31,7 +31,7 @@ axiom-eth = { git = "https://github.com/axiom-crypto/axiom-eth.git", branch = "c
     "evm",
     "clap",
 ] }
-snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch = "community-edition", default-features = false, features = [
+snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.1-ce", default-features = false, features = [
     "loader_halo2",
 ] }
 
